Django-Auth : Registraion form Functionable completely

--- a/hello/app1/templates/base.html
+++ b/hello/app1/templates/base.html
@@ -45,6 +45,7 @@
               </div>
             </div>
           </nav>
+          <h1 style="text-align: center; background-color: cadetblue; color: white; padding: 10px;">Welcome to the Employee management system</h1>
     </div>
 
     {% block start %}
