--- a/hello/app1/templates/base.html
+++ b/hello/app1/templates/base.html
@@ -38,9 +38,16 @@
                     </ul>
                   </li>
                 </ul>
+
                 <form class="d-flex" role="search">
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
+
+                  {% if request.user.is_authenticated %}  
+                    <a  class="btn btn-success" type="submit" href="/logout/"> Logout</a>
+                  {% else %}
+                    <a  class="btn btn-success" type="submit" href="login/"> Login</a>
+                    {% endif %}
+
                 </form>
               </div>
             </div>
