--- a/hello/app1/templates/login.html
+++ b/hello/app1/templates/login.html
@@ -19,12 +19,12 @@
         <h2 class="bg-dark text-bg-dark" style="text-align: center; padding: 10px;">Log-in</h2>
         <div class="form-group">
             <label for="exampleInputEmail1">Username</label>
-            <input type="username" class="form-control"  placeholder="Enter your Username">
+            <input type="username" name="username" class="form-control"  placeholder="Enter your Username">
           </div>
 
           <div class="form-group">
             <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" placeholder="Password">
+            <input type="password" name="password" class="form-control" placeholder="Password">
           </div>
 
           <p>Don't have an account <a href="{% url 'register' %}">Register here</a></p>
