CRUD OPERATION & Authentication DONE.

--- a/hello/app1/templates/index.html
+++ b/hello/app1/templates/index.html
@@ -77,8 +77,8 @@
               <img src="/media/{{employee.photo}}" style="height: 100px;">
             </td>
             <td>
-              <a href="/delete/{{employee.id}}/" class="btn btn-danger">Delete</a>
-              <a href="/update/{{employee.id}}/" class="btn btn-success">Update</a>
+              <a href="/delete/{{employee.id}}/" class="btn btn-danger m-2">Delete</a>
+              <a href="/update/{{employee.id}}/" class="btn btn-success m-1">Update</a>
             </td>
           </tr> 
         </tbody>
