--- a/hello/app1/templates/base.html
+++ b/hello/app1/templates/base.html
@@ -40,10 +40,10 @@
                 </ul>
 
                 <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                 
 
                   {% if request.user.is_authenticated %}  
-                    <a  class="btn btn-success" type="submit" href="/logout/"> Logout</a>
+                    <a  class="btn btn-success" type="submit" href="/ogout/"> Logout</a>
                   {% else %}
                     <a  class="btn btn-success" type="submit" href="login/"> Login</a>
                     {% endif %}
