--- a/hello/app1/templates/login.html
+++ b/hello/app1/templates/login.html
@@ -10,6 +10,7 @@
     border-radius: 10px; 
   }
 </style>
+
    
     <div class="container  mt-5">
       <!-- FORM -->
@@ -27,11 +28,12 @@
             <input type="password" name="password" class="form-control" placeholder="Password">
           </div>
 
-          <p>Don't have an account <a href="{% url 'register' %}">Register here</a></p>
+          <p style="text-align: center;">Don't have an account <a href="{% url 'register' %}" >Register here</a></p>
           
           <button  type="submit" class="btn btn-primary m-auto" style="width: 250px;">Login</button>
         </form>
         <hr>
+    </div>
 
 
 {% endblock %}
