--- a/hello/app1/templates/register.html
+++ b/hello/app1/templates/register.html
@@ -56,7 +56,8 @@
             <input type="password" class="form-control" name = "password" placeholder="Enter the Password">
           </div>
 
-          <p class=" m-auto">Already have an account <a href="{% url 'register' %}">Login</a></p> <br>
+          
+          <p class=" m-auto" style="text-align: center;">Already have an account <a href="{% url 'login' %}">Login</a></p> <br>
 
           <button type="submit" class="btn btn-primary m-auto" style="width: 250px;">Register</button>
       </form>
