UI has been updated and Fixed the bugs

--- a/hello/app1/templates/about.html
+++ b/hello/app1/templates/about.html
@@ -2,11 +2,38 @@
 
 {% block start %}
 
+<style>
 
-    <div class="container">
+</style>
+<div class="container  text-bg-light ">
+    <h1 style="text-align: center;" style = "text-decoration: underline;" >About</h1>
 
-        <h1>This is about page</h1>
+    <div class="container-fluid p-3 text-bg-light">
+        <p class="para justify-content-center " style="text-align: justify;">Welcome to our Employee Management System built on Django, where we provide
+            businesses with a comprehensive
+            solution for managing their workforce. Our system offers secure authentication and CRUD operations with an
+            intuitive Bootstrap UI, allowing you to manage all employee information in one place. </p>
+    
+        <p style="text-align: justify;">
+            Our authentication system ensures secure access to the platform, while our CRUD operations enable you to quickly
+            create, read, update, and delete employee records. The system's easy-to-use Bootstrap UI provides clear and
+            concise information in a visually appealing format, streamlining your employee management process. Built on
+            Django, a high-level web framework prioritizing security and reliability, our system is designed to be scalable
+            and provide businesses with a reliable solution for managing their workforce.
+        </p>
+        <p style="text-align: justify;">
+            At our company, we are committed to providing businesses with the best possible employee management solution,
+            and we are continuously improving and updating our system to meet their evolving needs. Whether you are a small
+            business or a large enterprise, our Employee Management System can help you streamline your employee management
+            process and improve your overall business operations. Thank you for choosing our Employee Management System, and
+            we look forward to helping you manage your workforce more efficiently.
+        </p>
     </div>
+    
+
+
+
+</div>
 
 
 
