--- a/hello/app1/templates/base.html
+++ b/hello/app1/templates/base.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <!-- navbar -->
-    <div class="container ">
+    <div class="container  text-bg-light">
         <nav class="navbar navbar-expand-lg bg-dark-subtle">
             <div class="container-fluid">
               <a class="navbar-brand" href="{% url 'home' %}">AnimeCrew</a>
@@ -43,9 +43,9 @@
                  
 
                   {% if request.user.is_authenticated %}  
-                    <a  class="btn btn-success" type="submit" href="/ogout/"> Logout</a>
+                    <a  class="btn btn-success" type="submit" href="/logout/"> Logout</a>
                   {% else %}
-                    <a  class="btn btn-success" type="submit" href="login/"> Login</a>
+                    <a  class="btn btn-success" type="submit" href="{% url 'login' %}"> Login</a>
                     {% endif %}
 
                 </form>
