--- a/hello/app1/templates/contact.html
+++ b/hello/app1/templates/contact.html
@@ -5,7 +5,7 @@
 
     <div class="container">
 
-        <h1>This is Contact page</h1>
+        <h1 style="text-align: center;">This is Contact page</h1>
     </div>
 
 
